samples/_failures_safe/1761138101_113652_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb70dc7a.c: In function ‘main’:
./samples/SAFE/__tmp_cb70dc7a.c:146:9: error: expected declaration or statement at end of input
  146 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_cb70dc7a.c:146:9: error: expected declaration or statement at end of input
